--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: pwrEWAS
 Title: A user-friendly tool for comprehensive power estimation for epigenome wide association studies (EWAS) 
-Version: 1.15.0
+Version: 1.15.1
 Description: pwrEWAS is a user-friendly tool to assists researchers in the design and planning of EWAS to help circumvent under- and overpowered studies.
 Author: Stefan Graw
 Maintainer: Stefan Graw <shgraw@uams.edu>
@@ -37,3 +37,4 @@ biocViews: DNAMethylation, Microarray, DifferentialMethylation, TissueMicroarray
 Encoding: UTF-8
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
+PackageStatus: Deprecated
